--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
         <meta charset="utf-8" />
         <title>Kalkulator</title>
         <link type="text/css" rel="stylesheet" href="css/style.css" />
+        <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     </head>
     <body>
       <div class="calculator">
+        <div class="text-tittle">
+          <h2>Proyek DTS : Kalkulator<br>---- Ono Setianan ----</h2>
+        </div>
         <input type="text" class="calculator-screen" value="0" disabled>
         <div class="calculator-keys">
           <div class="row">
@@ -42,3 +46,4 @@
     </body>
     <script type="text/javascript" src="js/kalkulator.js"></script>
 </html>
+
